name:                labels
version:             0.0.0
synopsis:            Declare and access tuple fields with labels
description:         Declare and access tuple fields with labels.
                     An approach to anonymous records.
homepage:            https://github.com/chrisdone/labels#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2016 Chris Done
category:            Development
build-type:          Simple
extra-source-files:  README.md, CHANGELOG
stability:           Experimental
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Labels,
                       Labels.Internal,
                       Labels.Cassava
  build-depends:       base >= 4.7 && < 5,
                       template-haskell,
                       -- Integrations
                       cassava,
                       bytestring,
                       unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/labels
