name:                labels-cassava
version:             0.0.0
synopsis:            Labels integration with cassava
description:         Labels integration with cassava
homepage:            https://github.com/chrisdone/labels#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2016 Chris Done
category:            Development
build-type:          Simple
extra-source-files:  README.md, CHANGELOG
stability:           Experimental
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Labels.Cassava
  build-depends:       base >= 4.7 && < 5,
                       template-haskell,
                       labels,
                       -- Integrations
                       cassava,
                       bytestring,
                       unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/labels
