name:                labels-explore
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Labels.Explore
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , http-conduit
                     , transformers
                     , mtl
                     , cassava-conduit
                     , exceptions
                     , conduit-extra
                     , resourcet
                     , transformers-base
                     , split
                     , bytestring
                     , cassava
                     , zip-conduit
                     , labels
                     , labels-csv
                     , directory
                     , vector
                     , text
  default-language:    Haskell2010

executable labels-explore-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , labels-explore
  default-language:    Haskell2010
