name:                labels-json
version:             0.0.0
synopsis:            Labels integration with aeson
description:         Labels integration with aeson
homepage:            https://github.com/chrisdone/labels#readme
license:             BSD3
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2016 Chris Done
category:            Development
build-type:          Simple
extra-source-files:  README.md, CHANGELOG
stability:           Experimental
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Labels.JSON
  build-depends:       base >= 4.7 && < 5,
                       template-haskell,
                       labels,
                       -- Integrations
                       aeson,
                       text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/labels
