name:                labels
version:             0.1.1
synopsis:            Anonymous records via named tuples
description:         Declare and access tuple fields with labels. An approach to anonymous records.
homepage:            https://github.com/chrisdone/labels#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2016 Chris Done
category:            Development
build-type:          Simple
extra-source-files:  README.md, CHANGELOG
stability:           Experimental
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Labels,
                       Labels.Internal
  build-depends:       base >= 4.7 && < 5,
                       template-haskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/labels
