Name:                zip-conduit
Version:             0.2.2.2
Synopsis:            Working with zip archives via conduits.
Description:         Working with zip archives via conduits.
License:             BSD3
License-file:        LICENSE
Author:              Tim Cherganov
Maintainer:          cherganov@gmail.com
Category:            Codec, Conduit
Homepage:            https://github.com/tymmym/zip-conduit
Bug-reports:         https://github.com/tymmym/zip-conduit/issues
Build-type:          Simple
Cabal-version:       >=1.10


Library
  Hs-source-dirs:    src

  Build-depends:
      base           >= 4.3
    , bytestring     >= 0.9
    , cereal         >= 0.3
    , conduit        >= 1.1
    , digest         >= 0.0
    , directory      >= 1.1
    , filepath       >= 1.3
    , mtl            >= 2.0
    , old-time       >= 1.0
    , time           >= 1.4
    , transformers   >= 0.3
    , utf8-string    >= 0.3
    , conduit-extra  >= 1.1
    , resourcet      >= 1.1

  Exposed-modules:
      Codec.Archive.Zip

  Other-modules:
      Codec.Archive.Zip.Internal
      Codec.Archive.Zip.Util

  Ghc-options:       -Wall -fno-warn-unused-do-bind
  Default-language:  Haskell2010


Test-suite tests
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    tests
  Main-is:           Tests.hs

  Build-depends:
      base           >= 4.3
    , bytestring     >= 0.9
    , conduit        >= 1.1
    , resourcet      >= 1.1
    , directory      >= 1.1
    , filepath       >= 1.3
    , HUnit          >= 1.2
    , hpc            >= 0.5
    , mtl            >= 2.0
    , temporary      >= 1.1
    , test-framework >= 0.6
    , test-framework-hunit >= 0.2
    , time           >= 1.4
    , zip-conduit

  Ghc-options:       -Wall -fno-warn-unused-do-bind
  Default-language:  Haskell2010


Benchmark bench
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    bench
  Main-is:           Bench.hs

  Build-depends:
      base           >= 4.3 && < 5
    , bytestring     >= 0.9 && < 0.11
    , directory      >= 1.1 && < 1.3
    , criterion      >= 1.0
    , filepath       >= 1.3
    , LibZip         >= 0.10 && < 0.12
    , random         >= 1.0 && < 1.2
    , temporary      >= 1.1 && < 1.3
    , zip-archive    >= 0.1 && < 0.3
    , zip-conduit

  Ghc-options:       -Wall -fno-warn-unused-do-bind
  Default-language:  Haskell2010


Source-repository head
  type:     git
  location: git://github.com/tymmym/zip-conduit.git
